ATLAS-1000: added build instructions to README.txt